{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 68,
  "lineage": "2d95188c-a6fb-efe9-606f-bab5bc2de2c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078a18a7984cbe634",
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:elastic-ip/eipalloc-078a18a7984cbe634",
            "association_id": "eipassoc-0bcb80d7a35908db6",
            "domain": "vpc",
            "id": "eipalloc-078a18a7984cbe634",
            "instance": "i-0f185fcdced891146",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0e1db6190fe69b2f4",
            "private_dns": "ip-10-0-14-63.ap-northeast-2.compute.internal",
            "private_ip": "10.0.14.63",
            "public_dns": "ec2-13-124-52-101.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.52.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bastion_eip"
            },
            "tags_all": {
              "Name": "bastion_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.sample-ec2-bastion",
            "aws_security_group.sample-sg-bastion",
            "aws_subnet.sample-subnet-public-01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eae4c34927054afd",
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:elastic-ip/eipalloc-0eae4c34927054afd",
            "association_id": "eipassoc-04967c5775353c5d7",
            "domain": "vpc",
            "id": "eipalloc-0eae4c34927054afd",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0b0c02e314138347e",
            "private_dns": "ip-10-0-7-18.ap-northeast-2.compute.internal",
            "private_ip": "10.0.7.18",
            "public_dns": "ec2-52-79-85-203.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.85.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0983ef62e68950164",
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:elastic-ip/eipalloc-0983ef62e68950164",
            "association_id": "eipassoc-0c7b7ed4133605f55",
            "domain": "vpc",
            "id": "eipalloc-0983ef62e68950164",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-042ea14bd3dea24ce",
            "private_dns": "ip-10-0-22-129.ap-northeast-2.compute.internal",
            "private_ip": "10.0.22.129",
            "public_dns": "ec2-13-209-194-131.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.194.131",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0de20b1c8590e09c5",
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:instance/i-03e319a98cb2966ba",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e319a98cb2966ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kosta_edu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03ff9e7b0bbc35a00",
            "private_dns": "ip-10-0-12-0.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.0",
            "public_dns": "ec2-3-38-193-112.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.193.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "sample-ec2-01"
                },
                "tags_all": {
                  "Name": "sample-ec2-01"
                },
                "throughput": 125,
                "volume_id": "vol-04a461c2551791437",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cf5f2133a0cac18",
            "tags": {
              "Name": "sample-ec2-01"
            },
            "tags_all": {
              "Name": "sample-ec2-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4430894df9cc6c9"
            ]
          },
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_subnet.sample-subnet-public-01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0de20b1c8590e09c5",
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:instance/i-0d45ee22f3126da74",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d45ee22f3126da74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kosta_edu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01bd6d3331a664152",
            "private_dns": "ip-10-0-26-222.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.26.222",
            "public_dns": "ec2-52-78-232-154.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.232.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "sample-ec2-02"
                },
                "tags_all": {
                  "Name": "sample-ec2-02"
                },
                "throughput": 125,
                "volume_id": "vol-0ac89049172ee6493",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077dab15fbdd85af7",
            "tags": {
              "Name": "sample-ec2-02"
            },
            "tags_all": {
              "Name": "sample-ec2-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4430894df9cc6c9"
            ]
          },
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_subnet.sample-subnet-public-02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0de20b1c8590e09c5",
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:instance/i-0011e9cf8cf19ed4f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0011e9cf8cf19ed4f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kosta_edu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f14a2d098e127269",
            "private_dns": "ip-10-0-76-82.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.76.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "sample-ec2-03"
                },
                "tags_all": {
                  "Name": "sample-ec2-03"
                },
                "throughput": 125,
                "volume_id": "vol-031ff0c0aa8d7fa06",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060046071110d49e2",
            "tags": {
              "Name": "sample-ec2-03"
            },
            "tags_all": {
              "Name": "sample-ec2-03"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4430894df9cc6c9"
            ]
          },
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_subnet.sample-subnet-private-01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01711d925a1e4cc3a",
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:instance/i-0f185fcdced891146",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f185fcdced891146",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kosta_edu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1db6190fe69b2f4",
            "private_dns": "ip-10-0-14-63.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.14.63",
            "public_dns": "ec2-13-124-52-101.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.52.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "sample-ec2-bastion"
                },
                "tags_all": {
                  "Name": "sample-ec2-bastion"
                },
                "throughput": 0,
                "volume_id": "vol-0d6235afa8a28e9b7",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cf5f2133a0cac18",
            "tags": {
              "Name": "sample-ec2-bastion"
            },
            "tags_all": {
              "Name": "sample-ec2-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b53c25b6b9e1871c"
            ]
          },
          "dependencies": [
            "aws_security_group.sample-sg-bastion",
            "aws_subnet.sample-subnet-public-01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sample-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:internet-gateway/igw-01ef4a7ce61f76765",
            "id": "igw-01ef4a7ce61f76765",
            "owner_id": "195275673211",
            "tags": {
              "Name": "sample-igw"
            },
            "tags_all": {
              "Name": "sample-igw"
            },
            "vpc_id": "vpc-0c9c63cb9968e7bba"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sample-ngw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eae4c34927054afd",
            "association_id": "eipassoc-04967c5775353c5d7",
            "connectivity_type": "public",
            "id": "nat-0df6c798cfd06170b",
            "network_interface_id": "eni-0b0c02e314138347e",
            "private_ip": "10.0.7.18",
            "public_ip": "52.79.85.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01cf5f2133a0cac18",
            "tags": {
              "Name": "sample-ngw-01"
            },
            "tags_all": {
              "Name": "sample-ngw-01"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip01",
            "aws_subnet.sample-subnet-public-01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sample-ngw-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0983ef62e68950164",
            "association_id": "eipassoc-0c7b7ed4133605f55",
            "connectivity_type": "public",
            "id": "nat-099ee3976d3a4ab98",
            "network_interface_id": "eni-042ea14bd3dea24ce",
            "private_ip": "10.0.22.129",
            "public_ip": "13.209.194.131",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-077dab15fbdd85af7",
            "tags": {
              "Name": "sample-ngw-02"
            },
            "tags_all": {
              "Name": "sample-ngw-02"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip02",
            "aws_subnet.sample-subnet-public-02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sample-private-route01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03593c4375bd68fc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0df6c798cfd06170b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03593c4375bd68fc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip01",
            "aws_nat_gateway.sample-ngw-01",
            "aws_route_table.sample-rt-private-01",
            "aws_subnet.sample-subnet-public-01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sample-private-route02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e40cbbda1c96028d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-099ee3976d3a4ab98",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e40cbbda1c96028d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip02",
            "aws_nat_gateway.sample-ngw-02",
            "aws_route_table.sample-rt-private-02",
            "aws_subnet.sample-subnet-public-02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sample-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01ef4a7ce61f76765",
            "id": "r-rtb-0ffa52559cddb625e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ffa52559cddb625e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sample-igw",
            "aws_route_table.sample-rt-public",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-private-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:route-table/rtb-03593c4375bd68fc1",
            "id": "rtb-03593c4375bd68fc1",
            "owner_id": "195275673211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0df6c798cfd06170b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-rt-private-01"
            },
            "tags_all": {
              "Name": "sample-rt-private-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9c63cb9968e7bba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-private-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:route-table/rtb-0e40cbbda1c96028d",
            "id": "rtb-0e40cbbda1c96028d",
            "owner_id": "195275673211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-099ee3976d3a4ab98",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-rt-private-02"
            },
            "tags_all": {
              "Name": "sample-rt-private-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9c63cb9968e7bba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:route-table/rtb-0ffa52559cddb625e",
            "id": "rtb-0ffa52559cddb625e",
            "owner_id": "195275673211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ef4a7ce61f76765",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-rt-public"
            },
            "tags_all": {
              "Name": "sample-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9c63cb9968e7bba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sample_route_table_associate_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b973d7946cdc3c2",
            "route_table_id": "rtb-03593c4375bd68fc1",
            "subnet_id": "subnet-060046071110d49e2"
          },
          "dependencies": [
            "aws_route_table.sample-rt-private-01",
            "aws_subnet.sample-subnet-private-01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sample_route_table_associate_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a99259b4c42790ee",
            "route_table_id": "rtb-0e40cbbda1c96028d",
            "subnet_id": "subnet-0e83b91fc3d0ac849"
          },
          "dependencies": [
            "aws_route_table.sample-rt-private-02",
            "aws_subnet.sample-subnet-private-02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sample_route_table_associate_public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dbd58126cc8d2bb",
            "route_table_id": "rtb-0ffa52559cddb625e",
            "subnet_id": "subnet-01cf5f2133a0cac18"
          },
          "dependencies": [
            "aws_route_table.sample-rt-public",
            "aws_subnet.sample-subnet-public-01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sample_route_table_associate_public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0312fd2cea5164712",
            "route_table_id": "rtb-0ffa52559cddb625e",
            "subnet_id": "subnet-077dab15fbdd85af7"
          },
          "dependencies": [
            "aws_route_table.sample-rt-public",
            "aws_subnet.sample-subnet-public-02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample-sg-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:security-group/sg-0b53c25b6b9e1871c",
            "description": "for bastion server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b53c25b6b9e1871c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sample-sg-bastion",
            "name_prefix": "",
            "owner_id": "195275673211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-sg-bastion"
            },
            "tags_all": {
              "Name": "sample-sg-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9c63cb9968e7bba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample-sg-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:security-group/sg-0e4430894df9cc6c9",
            "description": "for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4430894df9cc6c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sample-sg-elb",
            "name_prefix": "",
            "owner_id": "195275673211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-sg-elb"
            },
            "tags_all": {
              "Name": "sample-sg-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9c63cb9968e7bba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-bastion-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for all outbound",
            "from_port": 0,
            "id": "sgrule-353759831",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b53c25b6b9e1871c",
            "security_group_rule_id": "sgr-03e95c99a2bd810ee",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-bastion",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-bastion-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for ssh",
            "from_port": 22,
            "id": "sgrule-441467771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b53c25b6b9e1871c",
            "security_group_rule_id": "sgr-0df36ebd150087a38",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-bastion",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for all outbound",
            "from_port": 0,
            "id": "sgrule-1529739852",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e4430894df9cc6c9",
            "security_group_rule_id": "sgr-065a2772b5f030a5d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for http",
            "from_port": 80,
            "id": "sgrule-2970492476",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e4430894df9cc6c9",
            "security_group_rule_id": "sgr-05419088fb2c90ac9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-inbound2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for ssh",
            "from_port": 22,
            "id": "sgrule-126108553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e4430894df9cc6c9",
            "security_group_rule_id": "sgr-01ecce30825ed61cd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-private-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:subnet/subnet-060046071110d49e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060046071110d49e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275673211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-private-01"
            },
            "tags_all": {
              "Name": "sample-subnet-private-01"
            },
            "vpc_id": "vpc-0c9c63cb9968e7bba"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-private-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:subnet/subnet-0e83b91fc3d0ac849",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e83b91fc3d0ac849",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275673211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-private-02"
            },
            "tags_all": {
              "Name": "sample-subnet-private-02"
            },
            "vpc_id": "vpc-0c9c63cb9968e7bba"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-public-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:subnet/subnet-01cf5f2133a0cac18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cf5f2133a0cac18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "195275673211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-public-01"
            },
            "tags_all": {
              "Name": "sample-subnet-public-01"
            },
            "vpc_id": "vpc-0c9c63cb9968e7bba"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-public-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:subnet/subnet-077dab15fbdd85af7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077dab15fbdd85af7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "195275673211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-public-02"
            },
            "tags_all": {
              "Name": "sample-subnet-public-02"
            },
            "vpc_id": "vpc-0c9c63cb9968e7bba"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:vpc/vpc-0c9c63cb9968e7bba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a2a7bbbc6e551d75",
            "default_route_table_id": "rtb-0a74111d33b3d9f3f",
            "default_security_group_id": "sg-05b9beebd047d2f7d",
            "dhcp_options_id": "dopt-01dd74809c504a486",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9c63cb9968e7bba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a74111d33b3d9f3f",
            "owner_id": "195275673211",
            "tags": {
              "Name": "sample-vpc"
            },
            "tags_all": {
              "Name": "sample-vpc"
            }
          }
        }
      ]
    }
  ]
}